# author-today-intelligence

./: .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
docs/: AGENT_WORKFLOW.md  API_CONTRACT.md  APPROVED_GOAL.md  ARCHITECTURE.md  ARCHIVE_PROBE.md  Author.Today-Intelligence-Sergey.ru.html  COMMENTS_EVIDENCE.ru.md  DATA_MODEL.md  DESIGN_FRAME_V2.ru.md  EXECUTION_CHECKPOINT.md  LOCAL_APP.md  MANUAL_IMPORT.md  MERGE_INVENTORY.md  MONITORING_AUDIT_2026-07-17.md  PERMISSION_GATED_BROWSER.md  READER_OBSERVATIONS.md  RIGHTS_CASE_REPORT_TEMPLATE.ru.md  RIGHTS_DISCOVERY_METHOD.ru.md  RIGHTS_LEGAL_MAP.ru.md  RIGHTS_MODULE_INDEX.ru.md  RIGHTS_MONITORING_MVP.ru.md  RIGHTS_MONITORING_OFFER.ru.md  ROADMAP.md  RULES_AUDIT.md  SERGEY_ARCHIVE_AUDIT.ru.md  SOURCES.md  UNIFIED_GOAL.md  UNIFIED_HANDOFF.ru.md  UX_BRIEF_SERGEY.ru.md  UX_CONCEPTS_V2.ru.md  UX_CONCEPT_DECISION.ru.md
examples/: manual_private_import.synthetic.json  rights_candidate_sergey_coollib.json  rights_candidate_sergey_moreknig.json  rights_case_sergey_moreknig.json  sample_snapshot.json
reports/: RIGHTS_PILOT_SERGEY_20260717.ru.md  RIGHTS_PILOT_SERGEY_ACTION_PACK.ru.md  local-tracer-report.ru.html  project-report.ru.html  rights-pilot-sergey-abissinets-comparison-20260717.json  rights-pilot-sergey-candidate-probes-20260717.json  rights-pilot-sergey-domain-lookup-20260717.json  rights-pilot-sergey-search-20260717.json  sergey-archive-coverage.json  sergey-public-works-manifest.json  sergey-wayback-metrics.json
scripts/: audit_archive_coverage.py  (+3 more)
(+32 files in other folders)
